# evhedge

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
configs/: blast_bounty_s2_stage_map.yaml  blast_bounty_s2_stage_ranks.yaml  ewc2026_dota.yaml  ewc_stage_ranks.yaml
evhedge/: __init__.py  auto_predict.py  cli.py  collect.py  config_io.py  consistency.py  engine.py  models.py  montecarlo.py  pandascore_sync.py  power_model.py  ranking.py  scanner.py  scenarios.py  storage.py  strategies.py  team_aliases.py  webapp.py
evhedge/data/: team_aliases.yaml
evhedge/data_sources/: __init__.py  pandascore.py  pinnacle.py  polymarket.py
evhedge/sports/: __init__.py  football.py
evhedge/webapp_static/: index.html
examples/: ewc_dota_bracket.yaml  football_example.yaml  morocco_wc2026.yaml  wc2026_bracket.yaml
scripts/: blast_watch.bat  ewc_watch.bat
tests/: test_auto_predict.py  test_cli.py  test_collect.py  test_config_io.py  test_consistency.py  test_data_sources_pandascore.py  test_data_sources_pinnacle.py  test_data_sources_polymarket.py  test_engine.py  test_examples.py  test_football.py  test_montecarlo.py  test_pandascore_sync.py  test_power_model.py  test_ranking.py  test_scanner.py  test_scenarios.py  test_storage.py  test_strategies.py  test_team_aliases.py  test_webapp.py
