[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evhedge"
version = "0.1.0"
description = "EV analysis and hedging planner for multi-stage tournament outright bets (Polymarket NO-side vs sportsbook hedges)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "evhedge" }
]
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "matplotlib>=3.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
evhedge = "evhedge.cli:main"

[tool.setuptools.packages.find]
include = ["evhedge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
